k8s/base/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mbhealth
  labels:
    app.kubernetes.io/name: mbhealth
    app.kubernetes.io/part-of: mbhealth
